# DataShard

./: .gitignore  .issue.db  .readthedocs.yaml  CHANGELOG.md  README.md  README.txt  TODO.md  __init__.py  __main__.py  clear_demo.py  data_operations.py  data_structures.py  env.example  example.py  file_manager.py  full_demo.py  iceberg.py  mapping.txt  metadata_manager.py  pyproject.toml  snapshot_manager.py  test_data_operations.py  test_file_management.py  test_iceberg.py  test_occ.py  transaction.py
datashard/: __init__.py  __main__.py  data_operations.py  data_structures.py  file_manager.py  iceberg.py  metadata_manager.py  snapshot_manager.py  transaction.py
docs/: README.md  S3_STORAGE.md  changelog.rst  concepts.rst  concurrency.rst  conf.py  contributing.rst  index.rst  installation.rst  performance.rst  quickstart.rst  requirements.txt  s3_storage.rst  schemas.rst  time_travel.rst  transactions.rst  troubleshooting.rst
docs/api/: data_structures.rst  iceberg.rst  metadata_manager.rst  snapshot_manager.rst  transaction.rst
src/datashard/: __init__.py  __main__.py  avro_schemas.py  data_operations.py  data_operations.py.bak  data_structures.py  disk_utils.py  file_lock.py  file_manager.py  filters.py  garbage_collector.py  iceberg.py  integrity.py  lock_provider.py  logging_config.py  metadata_manager.py  s3_consistency.py  snapshot_manager.py  storage_backend.py  transaction.py
tests/: clear_demo.py  conftest.py  create_s3_bucket.py  example.py  full_demo.py  test_basic.py  test_data_operations.py  test_file_management.py  test_garbage_collector.py  test_iceberg.py  test_main.py  test_manifest_creation.py  test_occ.py  test_s3_integration.py  test_scan_features.py  test_schema_validation.py  test_security.py  verify_docs.py
