[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashard"
version = "0.5.4"
description = "Safe concurrent data operations for ML/AI workloads, Python implementation of Apache Iceberg concepts with S3 support"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
authors = [
    {name = "RODMENA LIMITED", email = "contact@rodmena.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pyarrow>=10.0.0",
    "lz4>=4.0.0",
    "fastavro>=1.4.0",
    "typing-extensions>=3.10.0; python_version < '3.10'"
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.26.0",
]
pandas = [
    "pandas>=1.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=22.0",
    "ruff>=0.0.247",
    "isort>=5.0",
    "mypy>=1.0",
    "types-setuptools>=65.0",
    "boto3>=1.26.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0"
]

[project.urls]
Homepage = "https://github.com/rodmena-limited/datashard"
Repository = "https://github.com/rodmena-limited/datashard"
Documentation = "https://datashard.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datashard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "-ra",
    "--tb=short",
    "-v"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["datashard"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*", 
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError", 
    "if 0:",
    "if __debug__:"
]

[tool.black]
line-length = 99
target-version = ['py37']
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # Line too long (handled by black)
    "C901",  # Function complexity (some filter/pruning functions need many branches)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
exclude = ["build/", "\\.venv/"]
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_equality = true
implicit_reexport = false
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "pyarrow.*", "pandas", "pytest", "_pytest.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_errors = true
